--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <header class="bg-dark p-2">
-        <a href="/index.html" class="btn btn-outline-info"><i class="fas fa-home"></i> Home</a>
         <a href="/empresa/index.html" class="btn btn-outline-info"><i class="fas fa-building"></i> Empresa</a>
+        <a href="/produto/index.html" class="btn btn-outline-info"><i class="fas fa-home"></i> Produto</a>
     </header>
 
 <h1>Bem vindo ao sistema das empresas</h1>
