--- a/produto/index.html
+++ b/produto/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/80793a8067.js" defer crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header class="bg-dark p-2">
         <a href="/index.html" class="btn btn-outline-info"><i class="fas fa-home"></i> Home</a>
-        <a href=" /produto/index.html" class="btn btn-outline-info"><i class="fas fa-building"></i> Produto</a>
+        <a href=" /empresa/index.html" class="btn btn-outline-info"><i class="fas fa-building"></i> Empresa</a>
     </header>
 
     |<div class="text-end mt-3 me-3">
@@ -17,5 +22,23 @@
         <a href="cadastro.html" class="btn btn-primary"><i class="fas fa-plus"></i> Cadastrar Produto</a>
     </div>
 
+    <div class="p-3">
+        <table class="table table-bordered table-hover" id="tabela-produto">
+            <thead class="table-success">
+                <tr>
+                    <th>Nome Produto</th>
+                    <th>Preço</th>
+                    <th>Categoria</th>
+                </tr>
+            </thead>
+        </table>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>    
+    <script src="/scripts/produto/listar-todos.js"></script>
+   
 </body>
 </html>
